# employees_ecp

./: .gitignore  COPY_ON_EMCHD_20240416_4af3778b-2b59-4f83-a38d-a015d6611b11.xml  LICENSE  ON_EMCHD_20240416_4af3778b-2b59-4f83-a38d-a015d6611b11.xml  README.md  TZ_DOP.md  TZ_py.md  alembic.ini  config.py  database.py  database_sqlite3  db.py  main.py  model.py  pyproject.toml  router.py  test.ipynb  tz.md  ЭЦП.xlsx
.github/workflows/: build.yml
assert/: test.py  добавление_ecp.md  удаление _сотрудника.md
assert/mchd_dower/: mchd_5.xml
assert/mchd_sign/: sig_1.sig
assets/: отправка_уведомлений.md
bot/: notify.py  telegram_message.py
crud/: dependensis.py  ecpies.py  employees.py  kriptoproies.py  mchd.py  notify.py
exetions/: exeption.py  exeption_.py
forms/: ecp_form.py  employees_form.py  kriptopro_form.py
migrations/: env.py
migrations/versions/: 2024_12_19_0948-045489601dd5_update_kriptopro_model.py  (+8 more)
models/: ecpes.py  employess.py  kriptoproies.py  mchd.py
objects/: mchd.py
pages/: add_ecp_find_empl.py  add_kriptopro_find_empl.py  add_mchd_classif.py  add_mchd_find_empl.py  dashboard.py  dashboard_copy.py  dashboard_current_licens.py  dashboard_easisted_licens.py  ecp_add_page.py  employees.py  employees_add_page.py  employees_all.py  employees_delete_page.py  employees_info_page.py  employees_info_page1.py  employess_update_page.py  kriptopro_add_page.py
repositories/: base.py  employees.py
schemas/: config.py  ecpies.py  employees.py  kriptopro.py  mchd.py
test/: testapp.py
utils/: database_sqlite3  pow_class.py  style.py
