[tool.poetry]
name = "employee-ecp"
version = "0.1.0"
description = "Программа для работы с данными по ЭКЦ"
authors = ["mi42195 <aptraev.mv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
requests = "^2.32.3"
flet = "^0.25.0"
pydantic = "^2.10.2"
flet-route = "^0.3.3"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.0"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
black = "^24.10.0"
python-telegram-bot = "^21.9"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
